// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`item-bank · 문항 검색(search.php) > 경계값 > 난이도 5 명시 — 난이도 5 가 조회되는 유일한 경로 · 비공개 제외 (BR-07, BR-06, BR-01) 1`] = `
{
  "count": 6,
  "message": null,
  "rows": [
    {
      "id": 24,
      "level": 5,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분수 덧셈과 뺄셈 혼합 계산",
      "unit": "M5-1",
    },
    {
      "id": 25,
      "level": 5,
      "tags": [
        "문장제",
        "서술형",
      ],
      "title": "분수의 곱셈 서술형",
      "unit": "M5-2",
    },
    {
      "id": 26,
      "level": 5,
      "tags": [
        "서술형",
      ],
      "title": "소수 곱셈의 추론",
      "unit": "M5-3",
    },
    {
      "id": 27,
      "level": 5,
      "tags": [
        "개념",
        "서술형",
      ],
      "title": "분수 나눗셈의 원리",
      "unit": "M6-1",
    },
    {
      "id": 28,
      "level": 5,
      "tags": [
        "문장제",
        "오답률높음",
        "서술형",
      ],
      "title": "비율 문제 종합",
      "unit": "M6-2",
    },
    {
      "id": 29,
      "level": 5,
      "tags": [
        "계산",
      ],
      "title": "대분수의 나눗셈",
      "unit": "M6-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계값 > 난이도 6 — 1~5 범위 바로 밖, 거부하지 않고 정수 비교 (BR-08) 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계값 > 키워드 101자 — 앞 100자로 잘림, 남은 % 만으로 조회 (BR-05, BR-04) 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계값 > 키워드 정확히 100자 — 잘리지 않음 (BR-05, BR-04) 1`] = `
{
  "count": 14,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계값 > 키워드 한 글자 — 경고만 내고 그대로 조회 (BR-15, BR-04) 1`] = `
{
  "count": 18,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계값 > 페이지 1000 — 999 로 고정, 건수는 있고 행은 빈 페이지 (BR-21) 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 빈 값 · 누락 > 키는 있고 값이 빈 문자열 · 공백만 — 누락과 같은 처리 (BR-04, BR-06, BR-16, BR-19, BR-21) 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 빈 값 · 누락 > 파라미터 전부 누락 — 난이도 5 제외 · 기본 정렬 · 1페이지 (BR-06, BR-16, BR-21, BR-01) 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상한 값 > 숫자로 시작하는 난이도 3abc — 정수 3 으로 변환해 조회 (BR-08) 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상한 값 > 아주 긴 태그 62자 — 50자로 잘린 뒤 없는 태그로 조회 (BR-13, BR-14, BR-12) 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상한 값 > 알 수 없는 정렬 DROP · 방향 up — 기본 정렬로 대체 (BR-17, BR-19, BR-16, BR-01) 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상한 값 > 없는 단원 코드 · 소문자 m9-99 — 경고만 내고 그대로 조회 (BR-09, BR-10, BR-11) 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상한 값 > 음수 페이지 -1 — 1페이지로 처리 (BR-21) 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 정상 입력 > 난이도 + 태그 — 조건 AND 결합 · 태그 정확 일치 (BR-03, BR-07, BR-12) 1`] = `
{
  "count": 4,
  "message": null,
  "rows": [
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 정상 입력 > 단원 하나 — 비공개 제외 · 난이도 5 제외 · 기본 정렬 (BR-09, BR-01, BR-06, BR-16) 1`] = `
{
  "count": 4,
  "message": null,
  "rows": [
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 정상 입력 > 키워드 + 제목 내림차순 — 보조 정렬 id 는 오름차순 유지 (BR-04, BR-18, BR-20) 1`] = `
{
  "count": 13,
  "message": null,
  "rows": [
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;
